--- a/clientApartmentsharing/src/app/admin-panel/admin-panel.component.css
+++ b/clientApartmentsharing/src/app/admin-panel/admin-panel.component.css
@@ -12,9 +12,30 @@
   overflow-y: auto;
 }
 
+select {
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #f9f9f9;
+  font-size: 16px;
+  margin: 20px 0;
+}
+
+option {
+  font-size: 16px;
+}
+
 #wrapper {
   padding-left: 0;
 }
+.table.table-striped.table-sm tbody tr.rented {
+  background-color: lightcoral;
+}
+
+.table.table-striped.table-sm tbody tr.unrented {
+  background-color: darkseagreen;
+}
+
 
 #page-wrapper {
   width: 100%;
