--- a/clientApartmentsharing/src/app/admin-panel/admin-panel.component.html
+++ b/clientApartmentsharing/src/app/admin-panel/admin-panel.component.html
@@ -41,6 +41,13 @@
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4"><div class="chartjs-size-monitor" style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
       <!--      <canvas class="my-4 chartjs-render-monitor" id="myChart" width="283" height="118" style="display: block; height: 95px; width: 227px;"></canvas>-->
       <h2>Apartments List</h2>
+
+      <select [(ngModel)]="statusFilter">
+        <option value="">All</option>
+        <option value="RENTED">Rented</option>
+        <option value="OK">Not rented</option>
+      </select>
+
       <div class="table-responsive">
         <table class="table table-striped table-sm">
           <thead>
@@ -60,7 +67,7 @@
           </tr>
           </thead>
           <tbody>
-          <tr *ngFor="let apartment of apartments">
+          <tr *ngFor="let apartment of getFilteredApartments()" [ngClass]="{'rented': apartment.status === 'RENTED', 'unrented': apartment.status === 'OK'}">
             <td>{{apartment.id}}</td>
             <td>{{apartment.area}}</td>
             <td>{{apartment.location}}</td>
@@ -70,9 +77,9 @@
             <td>{{apartment.price}} грн</td>
             <td class="text-center">{{apartment.status}}</td>
             <td class="text-center">{{apartment.purchaserId}}</td>
-            <td ><a *ngIf="apartment.status === 'RENTED'" class="btn btn-outline-info btn-sm" (click)="onOpenModal(apartment, blankUser, 'reportMessage')">Report</a></td>
-            <td ><a class="btn btn-outline-primary btn-sm" (click)="onOpenModal(apartment, blankUser, 'editApartment')">Update</a></td>
-            <td ><a class="btn btn-outline-danger btn-sm" (click)="onOpenModal(apartment, blankUser, 'delete')">Delete</a></td>
+            <td><a *ngIf="apartment.status === 'RENTED'" class="btn btn-outline-info btn-sm" (click)="onOpenModal(apartment, blankUser, 'reportMessage')">Report</a></td>
+            <td><a class="btn btn-outline-primary btn-sm" (click)="onOpenModal(apartment, blankUser, 'editApartment')">Update</a></td>
+            <td><a class="btn btn-outline-danger btn-sm" (click)="onOpenModal(apartment, blankUser, 'delete')">Delete</a></td>
           </tr>
           </tbody>
         </table>
@@ -108,7 +115,15 @@
 
           <div class="form-group">
             <label for="quarter">Quarter</label>
-            <input type="text" ngModel name="quarter" class="form-control" id="quarter" placeholder="Quarter" required autocomplete="off">
+
+            <select ngModel name="quarter" id="quarter" class="form-control"  required>
+              <option>Шевченківський</option>
+              <option>Личаківський</option>
+              <option>Галицький</option>
+              <option>Сихівський</option>
+              <option>Франківський</option>
+              <option>Залізничний</option>
+            </select>
           </div>
 
           <div class="form-group">
@@ -171,7 +186,15 @@
 
           <div class="form-group">
             <label for="quarter">Quarter</label>
-            <input type="text" ngModel="{{editApartment?.quarter}}" name="quarter" class="form-control" id="#quarter" placeholder="Quarter" required autocomplete="off">
+
+            <select ngModel="{{editApartment?.quarter}}" id="#quarter" class="form-control" name="quarter" required>
+              <option>Шевченківський</option>
+              <option>Личаківський</option>
+              <option>Галицький</option>
+              <option>Сихівський</option>
+              <option>Франківський</option>
+              <option>Залізничний</option>
+            </select>
           </div>
 
           <div class="form-group">
@@ -197,7 +220,7 @@
 
           <div class="form-group">
             <label for="status">Status</label>
-            <select ngModel="{{editApartment?.status}}" id="#status" class="form-control" name="status" required>
+            <select (change)="onStatusChange($event)" [(ngModel)]="editApartment.status" class="form-control" name="status" required>
               <option>OK</option>
               <option>RENTED</option>
             </select>
@@ -205,8 +228,9 @@
 
           <div class="form-group">
             <label for="purchaserId">Purchaser ID</label>
-            <input type="text" ngModel="{{ editApartment?.purchaserId }}" name="purchaserId" class="form-control" id="purchaserId" placeholder="Purchaser ID" required autocomplete="off">
+            <input type="text" [(ngModel)]="editApartment.purchaserId" name="purchaserId" class="form-control" id="purchaserId" placeholder="Purchaser ID" required autocomplete="off">
           </div>
+
 
           <div class="modal-footer">
             <button type="button" id="editComp" data-dismiss="modal" class="btn btn-secondary">Закрити</button>
