--- a/clientApartmentsharing/src/app/login/login.component.html
+++ b/clientApartmentsharing/src/app/login/login.component.html
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div class="form-group">
-        <input type="text" id="password" class="fadeIn third" name="login" placeholder="password" [(ngModel)]="form.password"
+        <input type="password" id="password" class="fadeIn third" name="login" placeholder="password" [(ngModel)]="form.password"
                #password="ngModel">
         <div
           class="alert alert-danger"
