--- a/clientApartmentsharing/src/app/register/register.component.html
+++ b/clientApartmentsharing/src/app/register/register.component.html
@@ -10,7 +10,7 @@
         <input type="text" ngModel name="username" class="form-control" id="username" placeholder="Username" required autocomplete="off">
       </div>
       <div class="form-group">
-        <input type="text" ngModel name="password" class="form-control" id="password" placeholder="Password" required autocomplete="off">
+        <input type="password" ngModel name="password" class="form-control" id="password" placeholder="Password" required autocomplete="off">
       </div>
       <div class="form-group">
         <input type="text" ngModel name="email" class="form-control" id="email" placeholder="Email" required autocomplete="off">
